# faxina-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: cleaner.rs  config.rs  display.rs  main.rs  scanner.rs  types.rs
src/projects/: mod.rs
tests/: cli.rs
wix/: License.rtf  main.wxs
