[package]
name = "faxina-cli"
version = "0.2.3"
edition = "2021"
description = "Faxina CLI — Limpa pastas de dependências de projetos inativos"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
walkdir = "2"
dialoguer = "0.11"
indicatif = "0.17"
jwalk = "0.8.1"
anyhow = "1.0.101"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.25.0"
