[package]
name = "faxina-cli"
version = "0.4.0"
edition = "2021"
description = "Faxina CLI — Limpa pastas de dependências de projetos inativos"
license = "GPL-3.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"
indicatif = "0.17"
jwalk = "0.8.1"
anyhow = "1.0.101"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
env_logger = "0.11.9"
log = "0.4.29"

[dev-dependencies]
assert_cmd = "2.1.2"
filetime = "0.2.27"
predicates = "3.1.4"
tempfile = "3.25.0"
